# charcoalos

./: .clang-format  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  PLANS.md  README.md
arch/: ExceptionHandler.h  Halt.h  Info.h  Interrupt.h
arch/arm64/: CMakeLists.txt  ExceptionHandler.c  ExceptionTypes.h  ExceptionVectors.s  Halt.c  Info.c  Interrupt.c
cmake/: Doxyfile.in
kernel/: CMakeLists.txt
kernel/Console/: IO.c  IO.h  Shell.c  Shell.h
kernel/Hardware/: DeviceTree.c  DeviceTree.h  Endian.h
kernel/Main/: Lifecycle.c  Lifecycle.h  Main.c
kernel/Memory/: Memory.c  Memory.h
kernel/Panic/: Panic.c  Panic.h  Restart.c  Restart.h
kernel/String/: String.c  String.h
kernel/Time/: Uptime.c  Uptime.h
minimal/rpi/: boot.s  kernel.c  linker.ld
minimal/virt/: boot.s  kernel.c  linker.ld
piconfig/: cmdline.txt  config.txt
platform/: IO.h  Info.h  Reboot.h
platform/rpi/: CMakeLists.txt  IO.c  IO.h  Info.c  InterruptMap.h  Reboot.c  boot.s  linker.ld
platform/virt/: CMakeLists.txt  IO.c  IO.h  Info.c  InterruptMap.h  Reboot.c  boot.s  linker.ld
tests/: CMakeLists.txt
tests/Helpers/: check_refactored_rpi_elf_symbols.cmake  check_refactored_virt_elf_symbols.cmake  check_rpi_elf_symbols.cmake  check_rpi_img_symbols.cmake  check_virt_console_smoke.cmake  check_virt_elf_symbols.cmake  check_virt_exception_smoke.cmake  check_virt_uptime_smoke.cmake
tests/Unit/: CMakeLists.txt  ConsoleNewlineTest.c  README.md
tests/Unit/Console/: ArchInfoTest.c  CMakeLists.txt  ConsoleIOTest.c  ConsoleNewlineTest.c  ExceptionHandlerTest.c  LifecyclePanicRestartTest.c  MemoryRegionsTest.c  PlatformConsoleTxFlushTest.c  PlatformRpiInfoTest.c  PlatformVirtInfoTest.c  ShellTest.c  UptimeTest.c
